# KarinCore

./: LICENSE  README-ru.md  README.md  index.html  package-lock.json  package.json
src/: about.txt  i18n.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: daemon.rs  main.rs
src-tauri/system/: karincore-sudoers  postinst
