[package]
name = "karin-proxy"
version = "1.2.5"
description = "KarinCore - Modern and secure proxy client"
authors = ["detestern <detestern@proton.me>"]
edition = "2021"
default-run = "karin-proxy"

[lib]
name = "karin_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "native-tls", "charset", "http2", "system-proxy"] }
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
base64 = "0.21"
rfd = "0.17.2"

[[bin]]
name = "karin-proxy-daemon"
path = "src/daemon.rs"
